# am_traj_Peng

./: .gitignore  Inintial_abs_coeffMats_unconstrained_AM.csv  Inintial_normed_coeffMats_unconstrained_AM.csv
devel/: .catkin
devel/include/cascade_controller/: paramsConfig.h
devel/include/quadrotor_msgs/: Bspline.h  OptimalTimeAllocator.h  PolynomialTrajectory.h  Replan.h  ReplanCheck.h  SpatialTemporalTrajectory.h  SwarmCommand.h  SwarmInfo.h  SwarmOdometry.h  TrajectoryMatrix.h
devel/lib/example0/: example0_node
devel/lib/example1/: example1_node
devel/lib/map_generator/: random_complex
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: cascade_controller.pc  catkin_simple.pc  cmake_utils.pc  example0.pc  example1.pc  example3.pc  map_generator.pc  mission_template.pc  odom_visualization.pc  pose_utils.pc  quadrotor_msgs.pc  router.pc  so3_quadrotor_simulator.pc  state_machine.pc  traj_server.pc  uav_utils.pc
devel/lib/python2.7/dist-packages/cascade_controller/cfg/: paramsConfig.py
devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
devel/lib/state_machine/: state_machine_node
devel/share/cascade_controller/cmake/: cascade_controllerConfig.cmake
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
devel/share/cmake_utils/cmake/: cmake_utilsConfig.cmake
devel/share/example0/cmake/: example0Config.cmake
devel/share/example1/cmake/: example1Config.cmake
devel/share/example3/cmake/: example3Config.cmake
devel/share/map_generator/cmake/: map_generatorConfig.cmake
devel/share/mission_template/cmake/: mission_templateConfig.cmake
devel/share/odom_visualization/cmake/: odom_visualizationConfig.cmake
devel/share/pose_utils/cmake/: pose_utilsConfig.cmake
devel/share/quadrotor_msgs/cmake/: quadrotor_msgs-msg-paths.cmake  quadrotor_msgsConfig.cmake
devel/share/roseus/ros/quadrotor_msgs/: manifest.l
devel/share/router/cmake/: routerConfig.cmake
devel/share/so3_quadrotor_simulator/cmake/: so3_quadrotor_simulatorConfig.cmake
devel/share/state_machine/cmake/: state_machineConfig.cmake
devel/share/traj_server/cmake/: traj_serverConfig.cmake
devel/share/uav_utils/cmake/: uav_utilsConfig.cmake
results/: Optimal_abs_coeffMats_unconstrained_AM.csv  Optimal_normed_coeffMats_unconstrained_AM.csv
src/example0/: CMakeLists.txt  package.xml
src/example0/config/: example0_params.yaml  traj.rviz
src/example0/src/: example0_node.cpp
src/example1/: key2joy.py
src/example1/env/cascade_control/cfg/: rviz_config.rviz
src/example1/env/cascade_control/launch/: simulator.launch
src/example1/fsto/: CMakeLists.txt  package.xml
src/example1/fsto/config/: example1_params.yaml
src/example1/fsto/include/fsto/: fsto.h  traj_gen.h
src/example1/fsto/src/: fsto.cpp  fsto_node.cpp  glbmap.cpp  r3planner.cpp  traj_gen.cpp
src/example2/: CMakeLists.txt  package.xml
src/example2/launch/: example2.launch
src/example2/src/: example2_node.cpp
src/example2_1/: CMakeLists.txt  package.xml
src/example2_1/launch/: example2_1.launch
src/example2_1/src/: example2_1_node.cpp
src/example3/: CMakeLists.txt  package.xml
src/example3/config/: example3_params.yaml  traj.rviz
src/example3/launch/: example3.launch
src/example3/src/: example3_node.cpp
src/example3_1/: CMakeLists.txt  package.xml
src/example3_1/launch/: example3_1.launch
src/example3_1/src/: example3_1_node.cpp
src/example4/: CMakeLists.txt  package.xml
src/example4/config/: example4_params.yaml  traj.rviz
src/example4/launch/: example4.launch
src/example4/src/: example4_node.cpp
src/include/am_traj/: am_traj.hpp
src/mav_trajectory_generation/mav_trajectory_generation_example/launch/: example.launch
src/mav_trajectory_generation/mav_trajectory_generation_example/src/: example_planner.cc
(+6 files in other folders)
