<package format="2">
  <name>example2_1</name>
  <author email="someone@somewhere.com">someone</author>
  <maintainer email="someone@somewhere.com">someone</maintainer>
  <version>0.1.0</version>
  <description>
      the example2_1 package
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>mav_trajectory_generation</build_depend>
  <exec_depend>mav_trajectory_generation</exec_depend>

  <build_depend>eigen_catkin</build_depend>
  <exec_depend>eigen_catkin</exec_depend>

  <build_depend>nlopt</build_depend>
  <exec_depend>nlopt</exec_depend>

  
</package>
