<?xml version="1.0"?>
<package format="2">
  <name>example4</name>
  <version>0.0.0</version>
  <description>The example4 package</description>

  <maintainer email="peng@todo.todo">peng</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>mav_trajectory_generation</build_depend>
  <exec_depend>mav_trajectory_generation</exec_depend>

  <build_depend>eigen_catkin</build_depend>
  <exec_depend>eigen_catkin</exec_depend>

  <build_depend>nlopt</build_depend>
  <exec_depend>nlopt</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
